changed all file names

--- a/app/landingPage.html
+++ b/app/landingPage.html
@@ -1,7 +1,7 @@
  <h1>{{title}}</h1>
     <nav>
       <a [routerLink]="['Dashboard']">Reserve</a>
-      <a [routerLink]="['Heroes']">Developers</a>
+      <a [routerLink]="['Locations']">Developers</a>
     </nav>
   <router-outlet></router-outlet>
 
